refactor: Replace Runtime#exec with ProcessBuilder#start